--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Super kursy dla programistów</title>
+  <title>Kursy dla programistów</title>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Saira+Condensed:wght@400;700&display=swap');
+  </style>
 </head>
 
 <body>
